# ROZ-nanobots-for-your-pc-

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  nanobot.py  nanobot.service  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
hooks/: pre-commit
